# xphrase

./: CHANGELOG.md  CNAME  CONTRIBUTING.md  LICENSE  README.md  RELEASE.md  SECURITY.md  XPHRASECALCULATION.md  gerar  pyproject.toml  requirements.txt  run.py  setup.py  word_manager.py  xphrase.py  xphrase.sh
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  issue_template.md
.github/workflows/: pypi-publish.yml  python-app.yml
data/: __init__.py  english_words.py  german_words.py  portuguese_words.py
docs/: CNAME  _config.yml  index.html  site.webmanifest  xphrase.html
src/: __init__.py  setup.py  word_manager.py  xphrase.py
src/xphrase/: __init__.py  main.py  setup.py  word_manager.py
src/xphrase/data/: __init__.py  english_words.py  german_words.py
tests/: __init__.py  test_xphrase.py
