[project] 
name = "xphrase"
version = "1.0.2"
description = "Expressive phrase generator, strong, modern and minimalist"
authors = [
    {name = "Gerivan Costa dos Santos", email = "dean-grumbly-plop@duck.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
keywords = [
    "phrase", 
    "generator", 
    "multilingual", 
    "password", 
    "security", 
    "cryptography",
    "german",
    "portuguese", 
    "english"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
    "Topic :: Utilities",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Natural Language :: German",
    "Natural Language :: Portuguese",
]

[project.urls]
Homepage = "https://github.com/gerivanc/xphrase"
Repository = "https://github.com/gerivanc/xphrase.git"
Issues = "https://github.com/gerivanc/xphrase/issues"
Documentation = "https://github.com/gerivanc/xphrase#readme"

[project.scripts]
xphrase-generate = "xphrase:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.wheel.packages]
src = "."

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
